--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>君だけの動画箱</title>
+  <title>るーちゃんの動画箱</title>
   <style>
     body {
       font-family: 'Hiragino Sans', sans-serif;
