--- a/benkyu.html
+++ b/benkyu.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>元気が欲しい時に見る動画</title>
+  <title>勉強に疲れた時に見る動画</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="video-title">元気が欲しい時に見る動画</h1>
-    <p class="video-desc">疲れた君へ。深呼吸して、これを見てね。</p>
+    <h1 class="video-title">勉強に疲れた時に見る動画</h1>
+    <p class="video-desc">休憩も大事。ちょっと笑ってまた頑張ろう。</p>
 
     <div class="video-frame">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/REPLACE_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%;height:60vh;min-height:260px;border:0"></iframe>
