--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <h1>どの気持ちのときに見る？</h1>
-    <p class="subtitle">小さな宝箱。いつでも開いてね。</p>
+    <!-- <p class="subtitle">小さな宝箱。いつでも開いてね。</p> -->
   </header>
 
   <main class="grid">
