--- a/sabishii.html
+++ b/sabishii.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1 class="video-title">寂しい時に見る動画</h1>
-    <p class="video-desc">一人じゃないよ、そばにいるよ。</p>
+    <!-- <p class="video-desc">一人じゃないよ、そばにいるよ。</p> -->
 
     <div class="video-frame">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/REPLACE_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%;height:60vh;min-height:260px;border:0"></iframe>
