--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>※動画は限定公開のYouTubeを埋め込んで使ってください。IDを入れ替えるだけでOKです。</p>
+    <!-- <p>※動画は限定公開のYouTubeを埋め込んで使ってください。IDを入れ替えるだけでOKです。</p> -->
   </footer>
 </body>
 </html>
