--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="card" href="sabishii.html">寂しい時</a>
     <a class="card" href="benkyu.html">勉強に疲れた時</a>
     <a class="card" href="chousen.html">挑戦の前に</a>
-    <a class="card" href="jibun.html">自分を好きになれない時</a>
+    <a class="card" href="jibun.html">自分が好きじゃない時</a>
   </main>
 
   <footer class="site-footer">
