--- a/genki.html
+++ b/genki.html
@@ -12,7 +12,7 @@
     <!-- <p class="video-desc">疲れた君へ。深呼吸して、これを見てね。</p> -->
 
     <div class="video-frame">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/REPLACE_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%;height:60vh;min-height:260px;border:0"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/iHFh4VIdbcA?si=swMATyIkFPzecAvo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%;height:60vh;min-height:260px;border:0"></iframe>
     </div>
 
     <a class="back" href="./">← トップに戻る</a>
