--- a/sabishii.html
+++ b/sabishii.html
@@ -12,7 +12,7 @@
     <!-- <p class="video-desc">一人じゃないよ、そばにいるよ。</p> -->
 
     <div class="video-frame">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/REPLACE_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%;height:60vh;min-height:260px;border:0"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/NKF4OMIAXp4?si=JY0lpSUThH4nMDNL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%;height:60vh;min-height:260px;border:0"></iframe>
     </div>
 
     <a class="back" href="./">← トップに戻る</a>
