Revise index.html structure and content

--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="site-header">
-    <h1>どの気持ちのときに見る？</h1>
-    <!-- <p class="subtitle">小さな宝箱。いつでも開いてね。</p> -->
-  </header>
+  <div class="container">
+    <header class="site-header">
+      <h1>今の気持ちは？</h1>
+      <p class="subtitle">いつでもここを開いてね</p>
+    </header>
 
-  <main class="grid">
-    <a class="card" href="genki.html">元気が欲しい時</a>
-    <a class="card" href="warai.html">笑いたい時</a>
-    <a class="card" href="aishite.html">愛してほしい時</a>
-    <a class="card" href="nemurenai.html">眠れない時</a>
-    <a class="card" href="sabishii.html">寂しい時</a>
-    <a class="card" href="benkyu.html">勉強に疲れた時</a>
-    <a class="card" href="chousen.html">挑戦の前に</a>
-    <a class="card" href="jibun.html">自分が好きじゃない時</a>
-  </main>
+    <main class="grid">
+      <a class="card" href="genki.html"><span>☀️</span>元気が欲しい</a>
+      <a class="card" href="warai.html"><span>😆</span>笑いたい</a>
+      <a class="card" href="aishite.html"><span>💌</span>愛してほしい</a>
+      <a class="card" href="nemurenai.html"><span>🌙</span>眠れない</a>
+      <a class="card" href="sabishii.html"><span>🧸</span>寂しい</a>
+      <a class="card" href="benkyu.html"><span>☕</span>勉強に疲れた</a>
+      <a class="card" href="chousen.html"><span>🔥</span>挑戦の前に</a>
+      <a class="card" href="jibun.html"><span>🪞</span>自分が好きじゃない</a>
+    </main>
 
-  <footer class="site-footer">
-    <!-- <p>※動画は限定公開のYouTubeを埋め込んで使ってください。IDを入れ替えるだけでOKです。</p> -->
-  </footer>
+    <footer class="site-footer">
+      <p>Created for you.</p>
+    </footer>
+  </div>
 </body>
 </html>
