--- a/aishite.html
+++ b/aishite.html
@@ -10,8 +10,8 @@
   <div class="container">
     
     <header class="video-header">
-      <h1 class="video-title">元気が欲しい時</h1>
-      <p class="video-desc">深呼吸して、これを見てね。</p>
+      <h1 class="video-title">愛してほしい時</h1>
+      <p class="video-desc">大好きだよ</p>
     </header>
 
     <div class="video-frame">
