--- a/chousen.html
+++ b/chousen.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>挑戦の前に見る動画</title>
+  <title></title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,6 +16,34 @@
     </div>
 
     <a class="back" href="./">← トップに戻る</a>
+  </div>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>挑戦の前に見る動画</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <div class="container">
+    
+    <header class="video-header">
+      <h1 class="video-title">挑戦の前に</h1>
+      <p class="video-desc">るちゃならできる！</p>
+    </header>
+
+    <div class="video-frame">
+      <iframe src="https://www.youtube.com/embed/iHFh4VIdbcA?si=swMATyIkFPzecAvo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="back-link-container">
+      <a class="back" href="./">ホームに戻る</a>
+    </div>
+
   </div>
 </body>
 </html>
