--- a/warai.html
+++ b/warai.html
@@ -8,14 +8,20 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="video-title">笑いたい時に見る動画</h1>
-    <!-- <p class="video-desc">クスッと笑える小さなサプライズ。</p> -->
+    
+    <header class="video-header">
+      <h1 class="video-title">笑いたい時</h1>
+      <p class="video-desc">笑うとスッキリするよね〜</p>
+    </header>
 
     <div class="video-frame">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/udaQMoh9RsU?si=FRRRWmoVlo3R451C" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:100%;height:60vh;min-height:260px;border:0"></iframe>
+      <iframe src="https://www.youtube.com/embed/udaQMoh9RsU?si=FRRRWmoVlo3R451C" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <a class="back" href="./">← トップに戻る</a>
+    <div class="back-link-container">
+      <a class="back" href="./">ホームに戻る</a>
+    </div>
+
   </div>
 </body>
 </html>
