--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div class="animated-background">
+    <div class="bg-shape shape-1"></div>
+    <div class="bg-shape shape-2"></div>
+    <div class="bg-shape shape-3"></div>
+  </div>
   <div class="container">
     <header class="site-header">
       <h1>今の気持ちは？</h1>
